plugins {
    id 'java'
}

group 'Java_Notes'
version '1.0-SNAPSHOT'

apply plugin: 'java'

repositories {
    mavenCentral()
}

tasks.withType(JavaCompile) {
    sourceCompatibility = '14'
    targetCompatibility = '14'
    options.compilerArgs.addAll(['--enable-preview'])
}

clean {
    delete 'out'
    delete 'build'
    delete '.gradle'
}

dependencies {
    // This dependency is found on compile classpath of this component and consumers.
    compile 'com.google.guava:guava:29.0-jre'
    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'

    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.37'
    compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.37'

    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.6.2'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.6.2'
    testCompile group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.6.2'

    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.6.2'
    // https://mvnrepository.com/artifact/org.json/json
    compile group: 'org.json', name: 'json', version: '20200518'

}
